enable upgrade to maven-surefire-plugin-3.5.2